--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ modId=distinguishedpotions
 modName=Distinguished Potions
 modVersion=4.0.0
 modAuthor=Fuzs
-modDescription=Trouble telling your potions apart? Well, time to fix that!
+modDescription=Trouble telling your potions apart? Time to give you a helping hand with that.
 modSourceUrl=https://github.com/Fuzss/distinguishedpotions
 modIssueUrl=https://github.com/Fuzss/distinguishedpotions/issues
 modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/distinguishedpotions.json
@@ -41,5 +41,5 @@ modFabricEnvironment=client
 # Mod Publishing
 projectReleaseType=release
 projectGameVersions=1.19.2
-projectCurseId=0
-projectModrinthId=0
+projectCurseId=682565
+projectModrinthId=lX1xTFBZ
