--- a/gradle.properties
+++ b/gradle.properties
@@ -5,28 +5,28 @@ org.gradle.daemon=false
 org.gradle.parallel=true
 
 # Common Project
-minecraftVersion=1.19.2
-minMinecraftVersion=1.19.2
-parchmentMappingsVersion=2022.08.14
-puzzlesVersion=4.3.8
-minPuzzlesVersion=4.3.8
-packFormat=9
+minecraftVersion=1.19.3
+parchmentMappingsVersion=2023.03.12
+puzzlesVersion=5.0.22
+minPuzzlesVersion=5.0.22
+resourcePackFormat=12
+dataPackFormat=10
 copyBuildJar=true
 
 # Forge Project
-forgeVersion=1.19.2-43.1.1
-minForgeVersion=43.1.0
+forgeVersion=1.19.3-44.1.23
+minForgeVersion=44.1.0
 
 # Fabric Project
-fabricVersion=0.14.9
-minFabricVersion=0.14.9
-fabricApiVersion=0.60.0+1.19.2
-minFabricApiVersion=0.60.0
+fabricVersion=0.14.17
+minFabricVersion=0.14.0
+fabricApiVersion=0.76.0+1.19.3
+minFabricApiVersion=0.72.0
 
 # Mod Attributes
 modId=distinguishedpotions
 modName=Distinguished Potions
-modVersion=4.0.1
+modVersion=5.0.0
 modAuthor=Fuzs
 modDescription=Trouble telling your potions apart? Time to give you a helping hand with that.
 modSourceUrl=https://github.com/Fuzss/distinguishedpotions
@@ -36,10 +36,10 @@ modMavenGroup=fuzs.distinguishedpotions
 # "MATCH_VERSION" for a mod required on both sides, "IGNORE_SERVER_VERSION" for a server only mod, "IGNORE_ALL_VERSION" for a client only mod
 modForgeDisplayTest=IGNORE_ALL_VERSION
 # "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
-modFabricEnvironment=client
+modFabricEnvironment=*
 
 # Mod Publishing
 projectReleaseType=release
-projectGameVersions=1.19.2
+projectGameVersions=1.19.3
 projectCurseId=682565
 projectModrinthId=lX1xTFBZ
