refactor item model overrides to use runtime pack

--- a/1.20/gradle.properties
+++ b/1.20/gradle.properties
@@ -8,7 +8,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=distinguishedpotions
 modName=Distinguished Potions
-modVersion=8.0.1
+modVersion=8.0.2
 modAuthor=Fuzs
 modDescription=Trouble telling your potions apart? Time to give you a helping hand with that.
 modLicense=MPL-2.0
@@ -26,10 +26,16 @@ projectReleaseType=release
 projectCurseForgeId=682565
 projectModrinthId=lX1xTFBZ
 
-dependenciesVersionCatalog=1.20.1-v4
+dependenciesVersionCatalog=1.20.1-v18
+dependenciesPuzzlesLibVersion=8.1.0
+dependenciesMinPuzzlesLibVersion=8.1.0
 dependenciesRequiredForgeCurseForge=puzzles-lib
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredForgeModrinth=puzzles-lib
 dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
+dependenciesOptionalForgeCurseForge=config-menus-forge
+dependenciesOptionalFabricCurseForge=config-menus-forge
+dependenciesOptionalForgeModrinth=forge-config-screens
+dependenciesOptionalFabricModrinth=forge-config-screens
 #dependenciesEmbeddedFabricCurseForge=cardinal-components
 #dependenciesEmbeddedFabricModrinth=cardinal-components-api
