--- a/1.20/Forge/build.gradle
+++ b/1.20/Forge/build.gradle
@@ -6,6 +6,9 @@ dependencies {
     // Puzzles Lib
     api fg.deobf(libs.puzzleslib.forge.get())
 
+    // Puzzles Access Api
+    api(fg.deobf(libs.puzzlesaccessapi.forge.get()))
+
     // Quality of Life Mods
     versionCatalog.findLibrary("bettermodsbutton.forge").ifPresent {
         runtimeOnly fg.deobf(it.get())
