--- a/1.20.4/gradle.properties
+++ b/1.20.4/gradle.properties
@@ -1,14 +1,11 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-org.gradle.parallel=true
 copyBuildJar=true
 
 # Mod Attributes
 modId=distinguishedpotions
 modName=Distinguished Potions
-modVersion=8.0.2
+modVersion=20.4.0
 modAuthor=Fuzs
 modDescription=Trouble telling your potions apart? Time to give you a helping hand with that.
 modLicense=MPL-2.0
@@ -21,21 +18,26 @@ modForgeDisplayTest=IGNORE_ALL_VERSION
 # "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
 modFabricEnvironment=*
 
+# Version Catalog
+dependenciesVersionCatalog=1.20.4-v18
+dependenciesPuzzlesLibVersion=20.4.16
+dependenciesMinPuzzlesLibVersion=20.4.16
+
 # Mod Publishing
 projectReleaseType=release
 projectCurseForgeId=682565
 projectModrinthId=lX1xTFBZ
 
-dependenciesVersionCatalog=1.20.1-v18
-dependenciesPuzzlesLibVersion=8.1.0
-dependenciesMinPuzzlesLibVersion=8.1.0
-dependenciesRequiredForgeCurseForge=puzzles-lib
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
-dependenciesRequiredForgeModrinth=puzzles-lib
+dependenciesRequiredNeoForgeCurseForge=puzzles-lib
+dependenciesRequiredForgeCurseForge=forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
-dependenciesOptionalForgeCurseForge=config-menus-forge
+dependenciesRequiredNeoForgeModrinth=puzzles-lib
+dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
+
 dependenciesOptionalFabricCurseForge=config-menus-forge
-dependenciesOptionalForgeModrinth=forge-config-screens
+dependenciesOptionalNeoForgeCurseForge=config-menus-forge
+dependenciesOptionalForgeCurseForge=config-menus-forge
 dependenciesOptionalFabricModrinth=forge-config-screens
-#dependenciesEmbeddedFabricCurseForge=cardinal-components
-#dependenciesEmbeddedFabricModrinth=cardinal-components-api
+dependenciesOptionalNeoForgeModrinth=forge-config-screens
+dependenciesOptionalForgeModrinth=forge-config-screens
