--- a/1.21.1/gradle.properties
+++ b/1.21.1/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=distinguishedpotions
 modName=Distinguished Potions
-modVersion=20.4.1
+modVersion=21.1.0
 modAuthor=Fuzs
 modDescription=Trouble telling your potions apart? Time to give you a helping hand with that.
 modLicense=MPL-2.0
@@ -19,15 +19,16 @@ modForgeDisplayTest=IGNORE_ALL_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.20.4-v18
-dependenciesPuzzlesLibVersion=20.4.16
-dependenciesMinPuzzlesLibVersion=20.4.16
+dependenciesVersionCatalog=1.21.1-v2
+#dependenciesPuzzlesLibVersion=21.0.0
+#dependenciesMinPuzzlesLibVersion=21.0.0
 
 # Mod Publishing
 projectReleaseType=release
 projectCurseForgeId=682565
 projectModrinthId=lX1xTFBZ
 
+# Required Dependencies
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredNeoForgeCurseForge=puzzles-lib
 dependenciesRequiredForgeCurseForge=forge-config-api-port-fabric, puzzles-lib
@@ -35,6 +36,7 @@ dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-li
 dependenciesRequiredNeoForgeModrinth=puzzles-lib
 dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
 
+# Optional Dependencies
 dependenciesOptionalFabricCurseForge=config-menus-forge
 dependenciesOptionalNeoForgeCurseForge=config-menus-forge
 dependenciesOptionalForgeCurseForge=config-menus-forge
