--- a/1.21.3/gradle.properties
+++ b/1.21.3/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=distinguishedpotions
 modName=Distinguished Potions
-modVersion=21.1.1
+modVersion=21.3.0
 modAuthor=Fuzs
 modDescription=Trouble telling your potions apart? Time to give you a helping hand with that.
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=IGNORE_ALL_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.1-v2
-#dependenciesPuzzlesLibVersion=21.0.0
-#dependenciesMinPuzzlesLibVersion=21.0.0
+dependenciesVersionCatalog=1.21.3-v17
+dependenciesPuzzlesLibVersion=21.3.15
+dependenciesMinPuzzlesLibVersion=21.3.15
 
 # Mod Publishing
 projectReleaseType=release
